<resources>
    <string name="app_name">MakeUpBrowser</string>
    <string name="app_info_title">App Information</string>
    <string name="app_name_title">App Name</string>
    <string name="app_id">App ID</string>
    <string name="version_number">Version Number</string>
    <string name="copyright">Copyright</string>
    <string name="done">Done</string>
    <string name="copyright_text" translatable="false">&#169; 2021, Anh Nguyen</string>
    <string name="settings">Settings</string>
    <string name="confirm_rating_alert">Show message to confirm rating</string>
    <string name="look_up_category">Category to look up makeup products</string>
    <string name="ratings">Ratings</string>
    <string name="welcome">Welcome to MakeUp Browser</string>

    <string-array name="look_up_categories">
        <item>Product brand</item>
        <item>Product type</item>
    </string-array>

    <string-array name="categories_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pitch">We have the most up-to-date information about makeup products</string>
    <string name="instruction">You can go to Settings to choose whether to search by product type or brand</string>
    <string name="go">Let\'s go</string>
    <string name="list_of_brand">List of Brands for %s</string>
    <string name="list_of_type">List of Product Types for %s</string>
    <string name="result">Here is your search result</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="link">Link</string>
    <string name="change_setting">Are you sure you want to change this setting?</string>
    <string name="attention">Attention!</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="rate_us">Rate Us</string>
    <string name="submit">Submit</string>
    <string name="rate_text">How do you like our app? Give us your feedback!</string>
    <string name="rating_alert">Are you sure you want to rate us %s?</string>
    <string name="confirm_rating">Thank you for rating us!</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="result_name" translatable="false">Hey %s</string>
    <string name="product_comment">Hope you like it, %s!</string>
    <string name="username_instruction">and to enter your username</string>

</resources>